docs: misc translations and corrected types and defaults in input variables table

--- a/README.yml
+++ b/README.yml
@@ -18,7 +18,7 @@ quick_start: |
         # memory                   = "2048"
         # vcpu                     = "1"
   
-        # Policies que usan la tasks desde el codigo desarrollado
+        # Policies used by the tasks from the developed code
         tasks_iam_role_policies = {
           ReadOnlyAccess = "arn:aws:iam::aws:policy/ReadOnlyAccess"
         }
@@ -29,7 +29,7 @@ quick_start: |
           }
         ]
   
-        # Policies que usa el servicio para poder iniciar tasks (ecr / ssm / etc)
+        # Policies used by the service to be able to start tasks (ecr / ssm / etc)
         task_exec_iam_role_policies = {}
         task_exec_iam_statements    = {}
   
@@ -49,16 +49,16 @@ features: []
 important_notes: ""
 input_table: |
   | name | Job name | `string` | `${local.common_name}-${each.key}` | no |
-  | command | List of commands that run when the container starts | `list` | `""` | no |
-  | environment | List of environment variables to be passed to the container during execution | `null` | `""` | no |
+  | command | List of commands that run when the container starts | `list(string)` | `[]` | no |
+  | environment | List of environment variables to be passed to the container during execution | `list(object)` | `""` | no |
   | image | URI of the container image to be used for running the task | `string` | `""` | no |
   | log_configuration | Configuration for container log registration | `any` | `{}` | no |
   | memory | Amount of memory to be assigned to the container during execution | `string` | `"2048"` | no |
-  | mount_points | List of mount points for volumes in the container | `list` | `{}` | no |
+  | mount_points | List of mount points for volumes in the container | `list(any)` | `{}` | no |
   | vcpu | Number of vCPUs assigned to the container | `string` | `"1"` | no |
-  | readonly_root_filesystem | Determines if the container's root file system should be read-only | `bool` | `{}` | no |
-  | fargate_platform_configuration | AWS Fargate platform configuration | `map` | `{}` | no |
-  | secrets | List of secrets linked to the job | `map` | `{}` | no |
+  | readonly_root_filesystem | Determines if the container's root file system should be read-only | `bool` | `false` | no |
+  | fargate_platform_configuration | AWS Fargate platform configuration | `map(string)` | `{ platformVersion = "LATEST" }` | no |
+  | secrets | List of secrets linked to the job | `map(string)` | `{}` | no |
   | task_definition_arn | ARN of the task definition associated with the ECS service | `string` | `null` | no |
   | task_definition_placement_constraints | Placement constraints for the task definition | `map` | `{}` | no |
   | task_exec_iam_role_arn | ARN of the IAM role for task execution | `string` | `null` | no |
@@ -83,4 +83,4 @@ input_table: |
   | tasks_iam_role_statements | IAM statements for the task role | `list` | `{}` | no |
   | tasks_iam_role_tags | Tags of the IAM role for the tasks | `map` | `{}` | no |
   | tasks_iam_role_use_name_prefix | Indicates whether a prefix should be used for the IAM role name | `bool` | `true` | no |
-  | tags | Tags that are added to all resources | `map` | `{}` | no |
+  | tags | Tags that are added to all resources | `map(string)` | `{}` | no |
